--- a/assets/assets.css
+++ b/assets/assets.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url("http://i.imgur.com/aZnZUjj.jpg")
+  background-image: url("https://i.imgur.com/aZnZUjj.jpg")
 }
 
 h1 {
