--- a/assets/assets.css
+++ b/assets/assets.css
@@ -21,6 +21,11 @@ h1 {
   font-family: 'Questrial', sans-serif;
 }
 
+
+#News {
+  text-align: center;
+  font-family: 'Questrial', sans-serif;
+}
 #add-weathers {
   -webkit-animation: animation 2000ms linear both;
   animation: animation 2000ms linear both;
